tests/e2e/explicit_cast_invalid2.story
List[time] t = {}
c = t as List[float]
